--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,9 @@ repositories {
 
 dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation 'org.jfree:jfreechart:1.5.3'
 }
 
 test {
