--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,16 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "App"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
